Prevented picture-box overflow (concretely: The shadow of the video on the help page) from being cut off. I had to edit article.css, so this might have unwanted consequences on the about or help pages. It all looks good to me though.

--- a/article.css
+++ b/article.css
@@ -253,7 +253,8 @@ background-color: var(--backgroundGray);
   margin: 30px 0 25px 0;
   padding: 30px 30px 30px 30px;
   border-radius: 5px;
-  overflow: hidden;
+  /*overflow: hidden;*/
+  /* ^ This used to mess up containted elements' shadows. Idk why I put it there in the first place*/
 }
 
 
